--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,9 @@ body{font-family: sans-serif; margin:0;padding: 0;background-color: #fff;}
 .star{color:black;font-size:10px;}
 .text{border-style: solid;border-width: 1px;border-color: #e3e6ea;padding-bottom: 20px;box-shadow: 1px 3px 15px rgba(4,10,50,.1);color:#444}
 
+.fees span{display: block;color:#a1a1a1;}
+.fees .quote p{color:#dd1c26;font-size:15px;padding-bottom: 5px;}
+
 .slashed{font-size:10px;}
 .slashed span{display: inline-block;};
 .circle{padding:5px 0px;margin-bottom: 5px;display: block;}
@@ -74,7 +77,7 @@ body{font-family: sans-serif; margin:0;padding: 0;background-color: #fff;}
 
 
 .offers p{font-size:11px;}
-.detail-row{margin-top:10px;}
+.detail-row{margin-top:7px;}
 .detail-row:after{content: ""; display: block;clear: both;}
 .detail-row p{font-size:11px;}
 
